@@ -97,6 +97,9 @@ Library
 - Issue #10791: Implement missing method GzipFile.read1(), allowing GzipFile
   to be wrapped in a TextIOWrapper.  Patch by Nadeem Vawda.
 
+- Issue #11707: Added a fast C version of functools.cmp_to_key().
+  Patch by Filip Gruszczyński.
+
 - Issue #11688: Add sqlite3.Connection.set_trace_callback().  Patch by
   Torsten Landschoff.
 
